@@ -10,7 +10,7 @@ The rules for this file:
     use tabs but use spaces for formatting
 
 ------------------------------------------------------------------------------
-??/??/??  richardjgowers, caio s. souza, manuel.nuno.melo
+??/??/??  richardjgowers, caio s. souza, manuel.nuno.melo, orbeckst
   * 0.10.0
 
   Enhancements
@@ -25,6 +25,8 @@ The rules for this file:
   * Amber netCDF4 Reader will now read Forces (Issue #257)
   * Amber netCDF4 Writer will now write Velocities and Forces
   * Added Amber coordinate/restart file reader (Issue #262)
+  * Structural superpositions (MDAnalysis.analysis.align) can work
+    with partial matches of atoms.
 
   Changes
 
@@ -32,6 +34,8 @@ The rules for this file:
     when empty.
   * Renamed TopologyGroup.dump_contents to "to_indices"
   * Deprecated 'bonds' keyword from Universe and replaced with 'guess_bonds'
+  * Structural superpositions (MDAnalysis.analysis.align) use partial
+    matches of atoms by default (use strict=True for old behavior)
 
   Fixes
 
